--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ output:
   flexdashboard::flex_dashboard:
     storyboard: true
     theme: 
-      primary: "#3a5bb0"
+      primary: "#304878"
       base_font: 
         google: Source Sans Pro
       
@@ -55,25 +55,11 @@ I think it will be interesting to analyze the different genres of the songs. Add
 Column {data-width=300}
 -------------------------------------
 
-<iframe src="https://open.spotify.com/embed/playlist/6cZQQaJ0MsSHyUfGyuLgGK?utm_source=generator" width="100%" height="100%" frameBorder="0" allowtransparency="true" allow="encrypted-media" data-external="1"></iframe>
+<iframe src="https://open.spotify.com/embed/playlist/6cZQQaJ0MsSHyUfGyuLgGK?utm_source=generator" width="99%" height="99%" frameBorder="0" allowtransparency="true" allow="encrypted-media" data-external="1"></iframe>
 
 # Visualisations {.storyboard}
 
-### Tempogram {data-commentary-width=300}
-```{r}
-tempogram1 <- readRDS(file = "data/tempogram1.RDS")
-tempogram2 <- readRDS(file = "data/tempogram2.RDS")
-tempogram3 <- readRDS(file = "data/tempogram3.RDS")
-tempogram4 <- readRDS(file = "data/tempogram4.RDS")
-
-
-grid.arrange(tempogram1, tempogram2, tempogram3, tempogram4, ncol = 2)
-```
-
-***
-These are four Fourier-based tempograms. A tempogram shows the tempo of a music piece over time. Viva La Vida by Coldplay and Good Old-Fashioned Lover Boy by Queen is added by Julia, King of Everything by Dominic Fike is added by Willemijn and my future by Billie Eilish is added by me (Roos). 
-
-### Visualisation of the Acousticness {data-commentary-width=300}
+### Visualisation of the Acousticness {data-commentary-width=400}
 
 ```{r}
 plot_acousticness <- readRDS(file = "data/plot_acousticness.RDS")
@@ -85,7 +71,7 @@ ggplotly(plot_acousticness)
 ***
 This plot is a boxplot about the acousticness of the songs added by Julia, Willemijn and Roos. You can clearly see that I have songs which are the most acoustic. It's interesting to see that Julia and Willemijn have similar acousticness.
 
-### Visualisation of the Energy, Valence and Mode {data-commentary-width=300}
+### Visualisation of the Energy, Valence and Mode {data-commentary-width=400}
 
 ```{r}
 plot_evm <- readRDS(file = "data/plot_evm.RDS")
@@ -96,7 +82,7 @@ ggplotly(plot_evm)
 ***
 This plot contains information about the energy, valence and mode of the songs added by Julia, Willemijn and Roos. I think it's interesting that the energy of most songs are high. However you can see that Willemijn has the most songs with high energy, which I expected. Another interesting point is that Julia and Willemijn have similarities between energy, valence and mode, their plot looks kind of the same. However mine (Roos) looks very different, my songs are more spread out and have less energy. 
 
-### Chromagrams of two versions of Crazy Little Thing Called Love {data-commentary-width=300}
+### Chromagrams of two versions of Crazy Little Thing Called Love {data-commentary-width=400}
 ```{r, out.width="40%"}
 plot_chroma <- readRDS(file = "data/plot_chroma.RDS")
 plot_chroma2 <- readRDS(file = "data/plot_chroma2.RDS")
@@ -121,7 +107,7 @@ list(list(x = 0.5,  y = 1.0,
 --- 
 These are two chromagrams of the same song 'Crazy Little Thing Called Love', however one is sung by Maroon 5 and the other by Queen. The one from Maroon 5 is added by me and the one from Queen is added by Julia. In the beginning, the Maroon 5 one is a lot in pitch class A and Queen is a lot in D. However, around 50 there is a similar pattern in pitch class E for both songs.
 
-### Chroma vs Timbre of Acid Tears - Culi. {data-commentary-width=300}
+### Chroma vs Timbre of Acid Tears - Culi. {data-commentary-width=400}
 ```{r}
 plot_at_chroma <- readRDS(file = "data/plot_at_chroma.RDS")
 plot_at_timbre <- readRDS(file = "data/plot_at_timbre.RDS")
@@ -131,7 +117,7 @@ subplot(plot_at_chroma, plot_at_timbre)
 *** 
 These plots show the chroma (left) and timbre (right) of the song 'Acid Tears' by 'Culi.'. It was added by me. The song is pretty consistent till about 2.45. This is shown well in the chromagram, at 165 the chroma changes. Before this point it was mostly C#, and after it is higher and switches between A#, G#, F# and F. This switch is also seen in the timbre, at the end the c02 is present.
 
-### Self-similarity matrices of Acid Tears - Culi. {data-commentary-width=300}
+### Self-similarity matrices of Acid Tears - Culi. {data-commentary-width=400}
 ```{r}
 bzt <- readRDS(file = "data/bzt.RDS")
 
@@ -164,7 +150,7 @@ bind_rows(
 ***
 These are self-similarity matrices of chroma and timbre of Acid Tears by Culi..
 
-### Chordogram 
+### Chordogram {data-commentary-width=400}
 ```{r}
 queen_plot <- readRDS(file = "data/queen_plot.RDS")
 phil_plot <- readRDS(file = "data/phil_plot.RDS")
@@ -175,5 +161,19 @@ subplot(queen_plot, phil_plot)
 
 ***
 These are chordograms of Good Old-Fashioned Lover Boy by Queen (left) and Son of Man by Phil Collins (right)
+
+### Tempogram {data-commentary-width=400}
+```{r}
+tempogram1 <- readRDS(file = "data/tempogram1.RDS")
+tempogram2 <- readRDS(file = "data/tempogram2.RDS")
+tempogram3 <- readRDS(file = "data/tempogram3.RDS")
+tempogram4 <- readRDS(file = "data/tempogram4.RDS")
+
+
+grid.arrange(tempogram1, tempogram2, tempogram3, tempogram4, ncol = 2)
+```
+
+***
+These are four Fourier-based tempograms. A tempogram shows the tempo of a music piece over time. Viva La Vida by Coldplay and Good Old-Fashioned Lover Boy by Queen is added by Julia, King of Everything by Dominic Fike is added by Willemijn and my future by Billie Eilish is added by me (Roos). 
 
 # Conclusion
